--- a/about.html
+++ b/about.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> PDG BITES </title>
-			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Amatic+SC:400,700|Lobster|Lobster+Two' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" type="text/css" href="css/normalize.css">
-    		<link rel="stylesheet" type="text/css" href="css/main.css">
+    		<link rel="stylesheet" type="text/css" href="css/about.css">
 	</head>
 
 	<body>
 		<header>
-		<h1>PDG BITES</h1>
-		<div class="navbar">
-		<nav>
-		<a href="home.html">HOME</a>
-		<a href="about.html">ABOUT</a>
-		<a href="services.html">SERVICES</a>
-		<a href="contact.html">CONTACT</a>
-		</nav>
-		</div>
-		</header>
-		<!DOCTYPE html>
+		
+			<h1>PDG Bites</h1>
+				
+					<nav class="clearfix">
+					   <a href="#" id="menu">&#9776;</a>
+					   <a id="button" href="contact.html">Contact
+					   </a>
+					   <a id="button" href="services.html">Recipes
+					   </a>
+					  <a id="button" href="about.html">About
+					  </a>
+					   <a id="button" href="home.html">Home
+					   </a>
+					</nav>
+					<div id="pic">
+					<h2>Pamela Di Gregorio</h2>
+					<img id="pame" src="images/pame.jpeg">
+					</div>
 
+					<div class="about">
+						Pamela is a Certified Chef from the Natural Gourmet Institute with an Integrative and Functional Culinary certification. She also has a Bachelor of Science in Nutrition from New York University. She has experience working with children and adults in various community cooking programs, including: <br>*Bubble <br>*TasteBuds Kitchen<br> She has also worked as: <br>*Private chef<br> *Recipe Tester<BR> *Creating menus for meal planning companies <br>Also, she teaches various private and group classes on cooking and nutrition. <br>
+						Pamela believes strongly that food is our most basic medicine. She is passionate about using education as a powerful tool to empower physical and mental wellbeing. She creates personalized meal plans and teaches dynamic cooking classes that focus on helping clients become more independent in the kitchen and ultimately lead healthier lives.
+						I am a NYC-based Functional Culinary Nutritionist currently gaining experience in the field of Culinary Genomics - the union between nutrition science, genomic medicine and the culinary arts. Food is more than just fuel for our bodies, it is our most basic medicine and it has the power to transform our physical and mental health. My core philosophy centers around a holistic, personalized approach to health- no one diet is fit for all- and one that digs deep to uncover root causes of imbalances.
+					</div>
+
+		
+		</header>
+		<div class="footer">
+			<a href="http://www.instagram.com/pameladigregorio"><img id="sm" src="images/instagram.png" alt="Instagram"></a>
+          <a href="http://www.twitter.com"><img id="sm" src="images/twitter.png" alt="Twitter"></a>
+          <a href="http://www.facebook.com"><img id="sm" src="images/facebookk.png" alt="Facebook"></a>
+		</div>
+		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+		<script type="text/javascript" src="js/about.js"></script>
+		<script type="text/javascript">
+			document.getElementById("menu").onclick = function(){
+      		document.querySelector("nav").classList.toggle("open");
+    		};
+		</script>
+		
 	</body>
 </html>
