--- a/home.html
+++ b/home.html
@@ -4,46 +4,65 @@
 	<head>
 		<title> PDG BITES </title>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Amatic+SC:400,700|Lobster|Lobster+Two' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" type="text/css" href="css/normalize.css">
     		<link rel="stylesheet" type="text/css" href="css/home.css">
     		
 	</head>
 
 	<body>
+		
 		<header>
-		<div class="bgc">
-			<h1>PDG BITES</h1>
-				
+			<h1>PDG Bites</h1>
 					<nav class="clearfix">
 					   <a href="#" id="menu">&#9776;</a>
-					   <button><a href="contact.html">SERVICES</a></button>
-					   <button><a href="services.html">CONTACT</a></button>
-						<button><a href="about.html">ABOUT</a></button>
-						<button><a href="home.html">HOME</a></button>
+					   <a id="button" href="contact.html">Contact
+					   </a>
+					   <a id="button" href="services.html">Recipes
+					   </a>
+					  <a id="button" href="about.html">About
+					  </a>
+					   <a id="button" href="home.html">Home
+					   </a>
 					</nav>
-		</div>
 		</header>
 
 
-		<div class="slideshow-container">
-		<div class="mySlides fade", id="current">
-  			<img src="images/food.jpg">
- 		</div>
-		<div class="mySlides fade">
-  			<img src="images/food2.jpeg">
+<div id="border">
+		<div id="slideshow">
+	
+  			<img id="slide" src="images/food.jpg">		
+  			<img id="slide" src="images/food2.jpeg">
+  			<img id="slide" src="images/food3.jpg">
+	
 		</div>
-		<div class="mySlides fade">
-  			<img src="images/food3.jpg">
- 		</div>
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-			<a class="next" onclick="plusSlides(1)">&#10095;</a>
 		</div>
+		
 
-
-	    <footer>
-			<p>blah blah</p>
-		</footer>
+	    <div class="footer">
+			<a href="http://www.instagram.com/pameladigregorio"><img id="sm" src="images/instagram.png" alt="Instagram"></a>
+          <a href="http://www.twitter.com"><img id="sm" src="images/twitter.png" alt="Twitter"></a>
+          <a href="http://www.facebook.com"><img id="sm" src="images/facebookk.png" alt="Facebook"></a>
+		</div>
 		<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-		<script type="text/javascript" src="js/home.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+		<script src="simpler-sidebar/dist/jquery.simpler-sidebar.min.js"></script>
+    <script type="text/javascript">
+      $('#slideshow').slick({
+  			speed: 500,
+  			fade: true,
+  			cssEase: 'linear',
+  			autoplay: true,
+  			autoplaySpeed: 2000,
+  			arrows: false,
+  			scroll: true,
+
+      });
+    </script>
+    <script type="text/javascript">
+			document.getElementById("menu").onclick = function(){
+      		document.querySelector("nav").classList.toggle("open");
+    		};
+	</script>
 	</body>
 </html>
