--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <a id="button" href="about.html">About
                        </a>
             <br>
-            <a id="button" href="home.html">Home
+            <a id="button" href="index.html">Home
                        </a>
             <br>
         </nav>
