--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
             <a id="button" href="about.html">About
             </a>
             <br>
-            <a id="button" href="home.html">Home
+            <a id="button" href="index.html">Home
              </a>
         </nav>
     </header>
